--- a/Engine/pom.xml
+++ b/Engine/pom.xml
@@ -30,6 +30,11 @@
             <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
